--- a/style.css
+++ b/style.css
@@ -145,3 +145,35 @@ p {
       url("./setup-files/images/image-3.jpeg") center/cover no-repeat fixed;
   }
 }
+
+/* 
+---------------------- cards project ----------------------------
+*/
+.title {
+  text-align: center;
+}
+.cards {
+  padding: 4rem 0;
+}
+.card-center {
+  width: 80vw;
+  max-width: 1170px;
+  margin: 2rem auto;
+}
+.card {
+  border: 1px solid var(--darkGrey);
+  margin-bottom: 3rem;
+}
+.card-info {
+  padding: 1rem;
+}
+.card-footer {
+  background: var(--darkGrey);
+  padding: 0.5rem 1rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1rem);
+  justify-content: space-evenly;
+}
+.card-footer span {
+  color: var(--primaryColor);
+}
