--- a/style.css
+++ b/style.css
@@ -177,3 +177,18 @@ p {
 .card-footer span {
   color: var(--primaryColor);
 }
+
+@media screen and (min-width: 768px) {
+  .card-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+  }
+}
+
+@media screen and (min-width: 1170px) {
+  .card-center {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1.5rem;
+  }
+}
